Fix widget crash when resizing